@@ -1,5 +1,7 @@
 # Head
 
+- named_references_to_keep and named_references_that_can_be_set_at_runtime can now refer to table names
+
 # 0.2.26 - 2014 June 10th
 
 - When pruning cells, now checks for circular references
